// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > renders a link 1`] = `
<div>
  <a
    class="antialiased font-inter text-base text-pca-grey-900 dark:text-white font-semibold inline-block rounded-sm underline transition-colors focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-blue-500 decoration-inherit transition-all duration-300 ease-in-out decoration-[1.5px] underline-offset-[5px]"
    href="https://pencilcase.app"
    target="_blank"
  >
    Go to pencil case
  </a>
</div>
`;

exports[`Link > renders a link with custom styling 1`] = `
<div>
  <a
    class="antialiased font-inter text-base text-pca-red-500 dark:text-white font-semibold inline-block rounded-sm underline transition-colors focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-blue-500 decoration-inherit transition-all duration-300 ease-in-out decoration-[1.5px] underline-offset-[5px]"
    href="https://pencilcase.app"
  >
    Go to pencil case
  </a>
</div>
`;

exports[`Link > renders a react router link 1`] = `
<div>
  <a
    class="antialiased font-inter text-base text-pca-grey-900 dark:text-white font-semibold inline-block rounded-sm underline transition-colors focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-blue-500 decoration-inherit transition-all duration-300 ease-in-out decoration-[1.5px] underline-offset-[5px]"
    data-discover="true"
    href="/some-path"
  >
    Go to pencil case
  </a>
</div>
`;
